--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "glyphs-mcp"
-version = "0.1.1"
+version = "0.2.0"
 description = "MCP bridge for AI-assisted type design in GlyphsApp"
 readme = "README.md"
 license = "MIT"
@@ -17,7 +17,7 @@ classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Topic :: Artistic Software",
+    "Topic :: Software, MCP",
 ]
 dependencies = [
     "mcp[cli]>=1.0.0",
